--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,5 +18,6 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PHOTOLAB_FBEC1 }}
           channelId: live
           projectId: photolab-fbec1
+          force: true
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
